--- a/css/site.css
+++ b/css/site.css
@@ -12,6 +12,10 @@
 
 .content {
     text-align: justify;
+    hyphens: auto;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
     margin-bottom: 1em
 }
 
