--- a/css/site.css
+++ b/css/site.css
@@ -1,37 +1,134 @@
 body {
-    font-size: 16px;
-}
-
-p, ol {
+    display: grid;
+    grid-template-columns: repeat(12, [col-start] 1fr);
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #333333;
+    font-size: 1.2em;
     line-height: 1.7em;
 }
 
-.center {
-    text-align: center;
+header, article, footer {
+    grid-column: col-start 2 / span 10;
 }
 
-.title {
-    font-size: 2.5em;
+header .head {
+    max-width: 860px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
 }
 
-.header {
-    margin: 1.5em 0;
+header .logo, header .title {
+    padding: 0.5em;
 }
 
-.content {
+header .logo {
+    text-align: right;
+}
+
+header .logo img {
+    width: 40%;
+    max-width: 128px;
+}
+
+header .title {
+    align-self: center;
+    font-size: 1.6em;
+}
+
+article section.copy {
+    max-width: 690px;
+    margin: auto;
     text-align: justify;
     hyphens: auto;
     -ms-hyphens: auto;
     -moz-hyphens: auto;
     -webkit-hyphens: auto;
-    margin-bottom: 1em;
-    letter-spacing: 0.01em
 }
 
-.content p, .content ol {
-    margin: 1.25em 0
+.copy h1 {
+    font-size: 1.5em;
 }
 
-.content img {
-    width: 100%
+.copy a, .copy a:visited {
+    color: #337ab7;
+    text-decoration: none;
+}
+
+.copy a:hover {
+    color: #23527c;
+    text-decoration: underline;
+}
+
+.table {
+    width:100%;
+    max-width:100%;
+    margin-bottom:20px;
+    border-spacing: 0;
+    font-size: 0.9em;
+    text-align: left;
+}
+
+.table>thead>tr>th,.table>tbody>tr>th,.table>tfoot>tr>th,.table>thead>tr>td,.table>tbody>tr>td,.table>tfoot>tr>td {
+    line-height: 1.6em;
+    vertical-align: top;
+    border-top: 1px solid #ddd;
+}
+
+.table>thead>tr>th {
+    vertical-align: bottom;
+    border-bottom: 2px solid #ddd;
+}
+
+.table>caption+thead>tr:first-child>th,.table>colgroup+thead>tr:first-child>th,.table>thead:first-child>tr:first-child>th,.table>caption+thead>tr:first-child>td,.table>colgroup+thead>tr:first-child>td,.table>thead:first-child>tr:first-child>td {
+    border-top: 0;
+}
+
+.table>tbody+tbody {
+    border-top: 2px solid #dddddd;
+}
+
+.table .table {
+    background-color: #ffffff;
+}
+
+.table-striped>tbody>tr:nth-of-type(odd) {
+    background-color: #f9f9f9;
+}
+
+.table-hover>tbody>tr:hover {
+    background-color: #f5f5f5;
+}
+
+footer {
+    text-align: center;
+    font-size: 0.7em;
+    margin-top: -0.5em;
+    margin-bottom: 1.5em;
+}
+
+footer img {
+    width: 40%;
+    max-width: 160px;
+}
+
+footer .powered-by {
+    margin-bottom: -0.1em;
+}
+
+@media (min-width: 700px) {
+    header, article, footer {
+        grid-column: col-start 3 / span 8;
+    }
+
+    .table {
+        padding: 0.2em 0.5em;
+        font-size: 1em;
+    }
+}
+
+@media (min-width: 900px) {
+    article section.copy {
+        padding: 1.5em 4em;
+    }
 }
