--- a/css/site.css
+++ b/css/site.css
@@ -77,35 +77,20 @@ article section.copy {
     text-align: left;
 }
 
-.table>thead>tr>th,.table>tbody>tr>th,.table>tfoot>tr>th,.table>thead>tr>td,.table>tbody>tr>td,.table>tfoot>tr>td {
+th, td {
     line-height: 1.6em;
     vertical-align: top;
     border-top: 1px solid #ddd;
+    padding: 0.2em;
 }
 
-.table>thead>tr>th {
-    vertical-align: bottom;
+th {
     border-bottom: 2px solid #ddd;
-}
-
-.table>caption+thead>tr:first-child>th,.table>colgroup+thead>tr:first-child>th,.table>thead:first-child>tr:first-child>th,.table>caption+thead>tr:first-child>td,.table>colgroup+thead>tr:first-child>td,.table>thead:first-child>tr:first-child>td {
     border-top: 0;
-}
-
-.table>tbody+tbody {
-    border-top: 2px solid #dddddd;
-}
-
-.table .table {
-    background-color: #ffffff;
 }
 
 .table-striped>tbody>tr:nth-of-type(odd) {
     background-color: #f9f9f9;
-}
-
-.table-hover>tbody>tr:hover {
-    background-color: #f5f5f5;
 }
 
 footer {
@@ -130,8 +115,11 @@ footer .powered-by {
     }
 
     .table {
-        padding: 0.2em 0.5em;
         font-size: 1em;
+    }
+
+    th, td {
+        padding: 0.2em 1em;
     }
 }
 
