--- a/css/site.css
+++ b/css/site.css
@@ -19,7 +19,7 @@ header .head {
     max-width: 860px;
     margin: auto;
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 1fr;
 }
 
 header .logo, header .title {
@@ -48,6 +48,10 @@ article section.copy {
     -ms-hyphens: auto;
     -moz-hyphens: auto;
     -webkit-hyphens: auto;
+}
+
+.copy h1, .copy li {
+    text-align: left;
 }
 
 .copy h1 {
@@ -110,6 +114,10 @@ footer .powered-by {
 }
 
 @media (min-width: 700px) {
+    header .head {
+        grid-template-columns: 1fr 2fr;
+    }
+
     header, article, footer {
         grid-column: col-start 3 / span 8;
     }
