--- a/css/site.css
+++ b/css/site.css
@@ -56,6 +56,10 @@ article section.copy {
 
 .copy h1, .copy li {
     text-align: left;
+    hyphens: none;
+    -ms-hyphens: none;
+    -moz-hyphens: none;
+    -webkit-hyphens: none;
 }
 
 .copy h1 {
